--- a/index.html
+++ b/index.html
@@ -4,23 +4,70 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hierarchy: Exercise 1</title>
+    <title>Assignment 2: EDA</title>
 
     <!-- Libraries -->
     <script src="https://code.jquery.com/jquery.min.js"></script>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.8.0/d3.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.7.4/d3.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.7.1/d3-tip.js"></script>
+    <link rel="stylesheet" href="//rawgithub.com/Caged/d3-tip/master/examples/example-styles.css">
 
     <!-- Custom files -->
     <link rel="stylesheet" href="css/main.css" />
+
+    <!-- your script file -->
+    <script src="js/main.js"></script>
 </head>
 
 <body class="container">
-    <div id="vis"></div>
-</body>
+    <h1>World Rank of Colleges</h1>
+    <p> Some text shoul go here that better explains the data set
 
-<!-- your script file -->
-<script src="js/main.js"></script>
+
+
+        <div class="dropdown btn-group">
+            <button class="btn btn-default dropdown-toggle" type="button" id="menu1" data-toggle="dropdown">Region
+            <span class="caret"></span></button>
+            <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
+                <li role="presentation"><a role="menuitem" tabindex="-1" value='North America'>North America</a></li>
+                <li role="presentation"><a role="menuitem" tabindex="-1" value='South America'>South America</a></li>
+                <li role="presentation"><a role="menuitem" tabindex="-1" value='Europe'>Europe</a></li>
+                <li role="presentation"><a role="menuitem" tabindex="-1" value='Middle East'>Middle East</a></li>
+                <li role="presentation"><a role="menuitem" tabindex="-1" value='Asia'>Asia</a></li>
+                <li role="presentation"><a role="menuitem" tabindex="-1" value='Australasia'>Australasia</a></li>
+                <li role="presentation"><a role="menuitem" tabindex="-1" value='Northern Africa'>Northern Africa</a></li>
+                <li role="presentation"><a role="menuitem" tabindex="-1" value='North America'>Southern Africa</a></li>
+            </ul>
+        </div>
+
+        <div class="dropdown btn-group">
+            <button class="btn btn-default dropdown-toggle" type="button" id="menu1" data-toggle="dropdown">Year
+            <span class="caret"></span></button>
+            <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
+                <li role="presentation"><a role="menuitem" tabindex="-1" value='2011'>2011</a></li>
+                <li role="presentation"><a role="menuitem" tabindex="-1" value='2012'>2012</a></li>
+                <li role="presentation"><a role="menuitem" tabindex="-1" value='2013'>2013</a></li>
+            </ul>
+        </div>
+
+        <div class="btn-group" data-toggle="buttons">
+            <label class="btn btn-primary">
+		    <input value = "any" type="radio" name="options" id="option1" autocomplete="off">Metric One 
+		</label>
+            <label class="btn btn-primary active">
+		    <input value = "binge" type="radio" name="options" id="option2" autocomplete="off" checked>Metric Two 
+		</label>
+            <label class="btn btn-primary active">
+		    <input value = "binge" type="radio" name="options" id="option2" autocomplete="off" checked>Metric Three
+		</label>
+        </div>
+
+
+        <h2>U.S. State Drinking Patterns in 2012</h2>
+
+        <div id="vis"></div>
+</body>
 
 </html>
